Change product-page structure, fix breadcrumb, product-title, and product description on top on mobile

--- a/01-basic/assets/styles/styles.css
+++ b/01-basic/assets/styles/styles.css
@@ -1447,11 +1447,15 @@ input[type='checkbox']:checked + label {
     position: relative;
     margin-top: 12rem;
     margin-bottom: 3.75rem;
-    display: flex;
-    align-items: center;
 }
 
 .product-page__content {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+.product-page__photos {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1460,7 +1464,7 @@ input[type='checkbox']:checked + label {
     width: 40%;
 }
 
-.product-page__content-main {
+.product-page__photos-main {
     width: 100%;
     height: 100%;
     border: 1px solid var(--color-box-product);
@@ -1469,7 +1473,7 @@ input[type='checkbox']:checked + label {
     overflow-x: scroll;
 }
 
-.product-page__content-main img {
+.product-page__photos-main img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -1478,32 +1482,32 @@ input[type='checkbox']:checked + label {
     cursor: -webkit-zoom-in;
     cursor: zoom-in;
 }
-.product-page__content-main img:hover {
+.product-page__photos-main img:hover {
     transform: scale(1.5);
 }
-.product-page__content-mirror {
+.product-page__photos-mirror {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.product-page__content-mirror li {
+.product-page__photos-mirror li {
     border: 1px solid var(--color-box-product);
     width: calc(20% - 5px);
 }
 
-.product-page__content-mirror li a {
+.product-page__photos-mirror li a {
     display: inline-block;
     width: 100%;
     height: auto;
 }
 
-.product-page__content-mirror img:hover {
+.product-page__photos-mirror img:hover {
     -webkit-filter: saturate(3);
     filter: saturate(3);
 }
 
-.product-page__content-mirror img {
+.product-page__photos-mirror img {
     width: 100%;
     height: 100%;
     transition: filter 0.3s ease;
@@ -1519,7 +1523,6 @@ input[type='checkbox']:checked + label {
 }
 
 .product-page__bag-breadcrumb {
-    width: 100%;
     margin-bottom: 1rem;
 }
 
@@ -1529,6 +1532,11 @@ input[type='checkbox']:checked + label {
     font-size: 0.75rem;
     letter-spacing: 1.3px;
     font-family: var(--font-monserrat);
+}
+
+.product-page__bag-desc {
+    width: 100%;
+    height: auto;
 }
 
 .product-page__bag-desc h2 {
@@ -1602,7 +1610,6 @@ input[type='checkbox']:checked + label {
 }
 
 .product-page__bag-addbag__btn-wrap {
-    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -1826,6 +1833,10 @@ input[type='checkbox']:checked + label {
         align-items: flex-start;
     }
 
+    .product-page__bag-addbag__btn-wrap {
+        width: 100%;
+    }
+
     .product-page__btn {
         width: calc(100% - 3rem - 6px);
     }
@@ -1997,18 +2008,22 @@ input[type='checkbox']:checked + label {
     }
 
     .product-page {
-        flex-direction: column;
-        justify-content: center;
         margin-top: 10rem;
         margin-bottom: 2rem;
+        padding-top: 15rem;
     }
 
     .product-page__content {
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .product-page__photos {
         width: 100%;
         margin-bottom: 2rem;
     }
 
-    .product-page__content-main img {
+    .product-page__photos-main img {
         height: auto;
     }
 
@@ -2017,8 +2032,23 @@ input[type='checkbox']:checked + label {
         width: 100%;
     }
 
+    .product-page__bag-breadcrumb,
+    .product-page__bag-desc h2,
     .product-page__bag-desc p {
-        width: 100%;
+        position: absolute;
+    }
+
+    .product-page__bag-breadcrumb {
+        top: 0;
+    }
+
+    .product-page__bag-desc h2 {
+        top: 2%;
+    }
+
+    .product-page__bag-desc p {
+        width: 85%;
+        top: 7%;
         font-size: 0.875rem;
     }
 }
